# precifique

./: .gitignore  Cargo.toml  build.rs  inventario.txt  inventario.txt~  inventory.txt  pyproject.toml  skills-lock.json
precifique/: config.py
precifique/cli/: main.py
precifique/core/: calc.py  csv_io.py  models.py  storage.py
src/: ast.rs  lexer.rs  main.rs  parser.rs  precifique.alex  precifique.g  precifique.rs  token.rs
tests/: test_calc.py  test_cli_components.py  test_cli_import_export.py  test_cli_price.py  test_cli_product.py  test_config.py  test_models.py  test_scaffold.py  test_storage.py
